# autodiff

./: README.rst  autodiff.py  meson.build  pyproject.toml
src/autodiff/: __init__.py  autodiff.py  meson.build  subsampling.py  util.py
