[project]
name="autodiff"
authors = [
    {name="Daniel Knüttel", email="daniel.knuettel@physik.uni-regensburg.de"}
]
description = "vector valued functions with automatic differential"
requires-python=">=3.4"
readme="README.rst"
dependencies=['numpy']

version="0.0.1"

[project.urls]
repository="https://github.com/daknuett/autodiff"
homepage="https://github.com/daknuett/autodiff"

[build-system]
requires = ["meson", "toml", "numpy", "ninja", "meson-python"]
build-backend = 'mesonpy'
